# traxor

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish.yml  rust.yml
config/: default.toml
derive_macro/: Cargo.toml
derive_macro/src/: from_file.rs  lib.rs  merge.rs  unit.rs
src/: error.rs  event.rs  handler.rs  lib.rs  log.rs  main.rs  merge.rs  telemetry.rs  tui.rs
src/app/: action.rs  command.rs  constants.rs  input.rs  mod.rs  tab.rs  torrent.rs  types.rs
src/app/utils/: filesize.rs  mod.rs  netspeed.rs  unit.rs
src/config/: color.rs  colors.rs  keybinds.rs  log.rs  mod.rs  tabs.rs  time.rs
src/ui/: help.rs  input.rs  mod.rs  popup.rs  status.rs  table.rs  utils.rs
tests/: app.rs  event.rs  handler.rs  merge.rs  tui.rs
