[package]
name = "traxor"
version = "0.1.0"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
license = "GPLv3"
edition = "2021"

[dependencies]
color-eyre = "0.6"
crossterm = "0.29"
ratatui = { version = "0.29" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0"
transmission-rpc = "0.5"
url = "2.5"
