[package]
name = "traxor"
version = "0.1.0"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
license = "GPLv3"
edition = "2024"

[dependencies]
color-eyre = "0.6"
crossterm = "0.29"
derive_macro = { path = "derive_macro" }
derive_more = { version = "2.0", features = ["display"] }
dirs = "6.0"
merge = "0.2"
ratatui = { version = "0.29" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-bunyan-formatter = { version = "0.3", default-features = false }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
transmission-rpc = "0.5"
url = "2.5"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
