[package]
name = "traxor"
version = "0.1.0"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
description = "A terminal UI for managing Transmission torrents"
repository = "https://github.com/kristoferssolo/traxor"
license = "GPL-3.0"
edition = "2024"
keywords = ["torrent", "transmission", "tui", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
color-eyre = "0.6"
crossterm = "0.29"
derive_more = { version = "2.1", features = ["display"] }
dirs = "6.0"
fuzzy-matcher = "0.3"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-bunyan-formatter = { version = "0.3", default-features = false }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
transmission-rpc = "0.5"
url = "2.5"

[dev-dependencies]
claims = "0.8"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
